[project]
name = "find-sound-peak"
version = "0.1.0"
description = "find sound peak"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "yt-find-peak",
]

[project.optional-dependencies]
build = [
    "pyinstaller>=6.11.0",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.9",
]

[tool.uv.sources]
yt-find-peak = { git = "https://github.com/nssuperx/yt-find-peak", rev = "main" }

[tool.ruff]
line-length = 100
