[project]
name = "find-sound-peak"
version = "0.1.0"
description = "find sound peak"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "yt-find-peak",
]

[dependency-groups]
dev = [
    "ruff>=0.8.4",
]
build = [
    "pyinstaller>=6.11.1",
]

[tool.uv.sources]
yt-find-peak = { git = "https://github.com/nssuperx/yt-find-peak", rev = "main" }

[tool.ruff]
line-length = 100
